--- a/artemisa-front/src/app/pages/add-inventory/add-inventory.page.html
+++ b/artemisa-front/src/app/pages/add-inventory/add-inventory.page.html
@@ -4,8 +4,8 @@
     <div class="container pb-5 pt-3">
       <div class="row pb-3">
         <div class="col-md-12 col-lg-12 pb-3">
-          <h4><b>{{data ? "Modificar" : "Agregar"}} {{ myProfile ? "mi perfil" : "Empleado" }}</b></h4>
-          <h6>{{myProfile ? "Completa todos los campos correctamente para modificar tu perfil." : (data ? "Completa todos los campos correctamente para modificar al empleado." : "Completa todos los campos correctamente para ingresar un nuevo empleado.")}}</h6>
+          <h4><b>{{data ? "Modificar" : "Agregar"}} Producto</b></h4>
+          <h6>{{data ? "Completa todos los campos correctamente para modificar el producto." : "Completa todos los campos correctamente para ingresar un nuevo producto"}}</h6>
         </div>
         <div class="col-md-12 col-lg-12">
           <div class="card mb-3">
