--- a/artemisa-front/src/app/pages/inventory/inventory.page.html
+++ b/artemisa-front/src/app/pages/inventory/inventory.page.html
@@ -11,7 +11,7 @@
             <div class="card htr">
               <div class="card-body text-center">
                 <h3>{{counter.p}}<br />
-                  <ion-chip color="warning"> Stock Bajo </ion-chip>
+                  <ion-chip color="danger"> Stock Bajo </ion-chip>
                 </h3>
               </div>
             </div>
@@ -20,7 +20,7 @@
             <div class="card htr">
               <div class="card-body text-center">
                 <h3>{{counter.c}}<br />
-                  <ion-chip color="success"> Stock Medio </ion-chip>
+                  <ion-chip color="warning"> Stock Medio </ion-chip>
                 </h3>
               </div>
             </div>
