--- a/artemisa-front/src/app/pages/inventory/inventory.page.scss
+++ b/artemisa-front/src/app/pages/inventory/inventory.page.scss
@@ -20,7 +20,6 @@ ion-item {
 .card.selected:active {background: #000000;color: white;}
 .flex-stock {
     display: flex;
-    justify-content: center;
     align-items: center;grid-gap:5px
 }.danger{background: #fddddd;}
-.medium{background:#ffc79757;}
+.medium{background:#fff7c9;}
