--- a/artemisa-front/src/global.scss
+++ b/artemisa-front/src/global.scss
@@ -54,9 +54,6 @@ div#swal2-html-container { margin-top: 0; }
 .black{background: linear-gradient(45deg, #2e2e2e, #383838);border: 0;}
 .black:hover{background: linear-gradient(45deg, #3f3f3f, #464646);}
 .black:active{background: linear-gradient(45deg, #242424, #2e2e2e);}
-
-
-
 #page-container {min-width: 100%;height: 100%;overflow: auto;background: #f9f9f9;padding: 25px;}
 .page-content {padding:25px;width: 100%;}
 .user-profile img{border-radius: 100%;object-fit: cover;cursor: pointer;transition: 0.2s;border-radius: 100%;
@@ -142,6 +139,8 @@ a{cursor: pointer;}
     .table-dynamic {
         display: block;
     }
+    .flex-stock{
+        justify-content: center;}
     .table-dynamic tr{    border-bottom: 1px solid #0000000a;   }
     .table-dynamic thead{    display: none;}
     .table-dynamic tbody{width: 100%; display: block;}
