--- a/artemisa-front/src/app/modals/view-products/view-products.page.html
+++ b/artemisa-front/src/app/modals/view-products/view-products.page.html
@@ -49,9 +49,9 @@
                       </div>
                     </div>
                 </ng-container>
-                <pagination-controls (pageChange)="p = $event"></pagination-controls>
+                <pagination-controls previousLabel="Anterior" nextLabel="Siguiente" (pageChange)="p = $event"></pagination-controls>
                 <div class="mb-3 col-lg-12" style="text-align: center">
-                  <button type="button" class="btn btn-primary skyler" style="margin: 0 auto" (click)="selectProducts()">Seleccionar Productos</button>
+                  <button type="button" class="btn btn-primary skyler" style="margin: 0 auto" (click)="selectProducts()">Listo</button>
                 </div>
               </div>
             </div>
