--- a/artemisa-front/src/app/pages/add-customer/add-customer.page.html
+++ b/artemisa-front/src/app/pages/add-customer/add-customer.page.html
@@ -1,5 +1,5 @@
 <ion-content id="ion-content">
-  <ngx-spinner *ngIf="data" bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-spin" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner>
+  <ngx-spinner *ngIf="data || newUser" bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-spin" [fullScreen] = "true"><p style="color: white" > Cargando... </p></ngx-spinner>
   <div id="page-container">
     <div class="container pb-5 pt-3">
       <div class="row pb-3">
