--- a/artemisa-front/src/app/pages/customers/customers.page.html
+++ b/artemisa-front/src/app/pages/customers/customers.page.html
@@ -143,7 +143,7 @@
                   </tr>
                 </tbody>
               </table>
-              <pagination-controls (pageChange)="p = $event"></pagination-controls>
+              <pagination-controls previousLabel="Anterior" nextLabel="Siguiente" (pageChange)="p = $event"></pagination-controls>
             </div>
           </div>
         </div>
