--- a/artemisa-front/src/app/modals/product-log/product-log.page.html
+++ b/artemisa-front/src/app/modals/product-log/product-log.page.html
@@ -78,7 +78,7 @@
                 </ng-container>
               </tbody>
             </table>
-            <pagination-controls (pageChange)="p = $event"></pagination-controls>
+            <pagination-controls previousLabel="Anterior" nextLabel="Siguiente" (pageChange)="p = $event"></pagination-controls>
           </div>
         </div>
       </div>
