--- a/artemisa-front/src/app/pages/inventory/inventory.page.html
+++ b/artemisa-front/src/app/pages/inventory/inventory.page.html
@@ -160,6 +160,9 @@
                 </ng-container>
               </tbody>
             </table>
+            <ng-container *ngIf="(products | filterBy: searchInput)?.length === 0">
+              <div class="text-center"><i>No se han encontrado productos.</i></div><br/>
+            </ng-container>
             <pagination-controls previousLabel="Anterior" nextLabel="Siguiente" (pageChange)="p = $event"></pagination-controls>
           </div>
         </div>
