--- a/artemisa-front/src/app/pages/dashboard/dashboard.page.html
+++ b/artemisa-front/src/app/pages/dashboard/dashboard.page.html
@@ -6,12 +6,12 @@
           <h4><b>Dashboard</b></h4>
           <h6>Resumen general de todos los pedidos y clientes.</h6>
         </div>
-        <div class="col-md-6 col-lg-6">
+        <div class="col-md-12 col-lg-12">
+          <div class="col-md-12 pb-12">
+            <h5>Pedidos</h5>
+          </div>
           <div class="row">
-            <div class="col-md-12 pb-12">
-              <h5>Pedidos</h5>
-            </div>
-            <div class="col-md-4 pb-3">
+            <div class="col-6 col-md-3 pb-3">
               <div class="card htr">
                 <div class="card-body text-center">
                   <h3>{{counter.p}}<br />
@@ -20,7 +20,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 pb-3">
+            <div class="col-6 col-md-3 pb-3">
               <div class="card htr">
                 <div class="card-body text-center">
                   <h3>{{counter.c}}<br />
@@ -29,7 +29,16 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 pb-3">
+            <div class="col-6 col-md-3 pb-3">
+              <div class="card htr">
+                <div class="card-body text-center">
+                  <h3>{{counter.cc}}<br />
+                    <ion-chip color="danger"> Cancelados </ion-chip>
+                  </h3>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-md-3 pb-3">
               <div class="card htr">
                 <div class="card-body text-center">
                   <h3>{{counter.t}}<br />
@@ -40,7 +49,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 col-lg-6">
+        <div class="col-md-12 col-lg-12">
           <div class="row">
             <div class="col-md-12 pb-12">
               <h5>Clientes</h5>
