--- a/artemisa-front/src/app/pages/employees/employees.page.html
+++ b/artemisa-front/src/app/pages/employees/employees.page.html
@@ -110,6 +110,9 @@
                   </tr>
                 </tbody>
               </table>
+              <ng-container *ngIf="(users | filterBy: searchInput)?.length === 0">
+                <div class="text-center"><i>No se han encontrado empleados.</i></div><br/>
+              </ng-container>
               <pagination-controls previousLabel="Anterior" nextLabel="Siguiente" (pageChange)="p = $event"></pagination-controls>
             </div>
           </div>
